--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -59,7 +59,7 @@
 \hypersetup{breaklinks=true,
             bookmarks=true,
             pdfauthor={},
-            pdftitle={Associations between Chlorophyll a and Microcystin-LR Health Advisory Concentrations},
+            pdftitle={Associations between Chlorophyll a and various Microcystin-LR Health Advisory Concentrations},
             colorlinks=true,
             citecolor=blue,
             urlcolor=blue,
@@ -106,8 +106,8 @@
 }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\title{Associations between Chlorophyll \emph{a} and Microcystin-LR Health
-Advisory Concentrations}
+\title{Associations between Chlorophyll \emph{a} and various Microcystin-LR
+Health Advisory Concentrations}
 \author{
 Jeffrey W. Hollister
 Betty J. Kreakie
@@ -120,8 +120,8 @@ Dorothy Q. Kellog
 %%Adds title from YAML
 \begin{singlespace}
 \begin{center}
-\huge Associations between Chlorophyll \emph{a} and Microcystin-LR Health
-Advisory Concentrations
+\huge Associations between Chlorophyll \emph{a} and various Microcystin-LR
+Health Advisory Concentrations
 \end{center}
 %%Adds Author, correspond email asterisk, and affilnum from YAML
 \begin{center}
@@ -173,11 +173,20 @@ Kingston, RI, 02882, USA\\*
 
 \section{Introduction}\label{introduction}
 
+EPA just released HA for MC
+
+MC requires lab work
+
+MC associated with Chl a
+
+Use association and cpa to id chl a concentration that indicative of
+exceeding HA
+
 \section{Methods}\label{methods}
 
 \begin{longtable}[c]{@{}lll@{}}
 \toprule
-\begin{minipage}[b]{0.27\columnwidth}\raggedright\strut
+\begin{minipage}[b]{0.11\columnwidth}\raggedright\strut
 Source
 \strut\end{minipage} &
 \begin{minipage}[b]{0.16\columnwidth}\raggedright\strut
@@ -188,8 +197,8 @@ Concentration
 \strut\end{minipage}\tabularnewline
 \midrule
 \endhead
-\begin{minipage}[t]{0.27\columnwidth}\raggedright\strut
-WHO, OH, OR
+\begin{minipage}[t]{0.11\columnwidth}\raggedright\strut
+WHO
 \strut\end{minipage} &
 \begin{minipage}[t]{0.16\columnwidth}\raggedright\strut
 Drinking
@@ -197,16 +206,7 @@ Drinking
 \begin{minipage}[t]{0.19\columnwidth}\raggedright\strut
 1 ug/l
 \strut\end{minipage}\tabularnewline
-\begin{minipage}[t]{0.27\columnwidth}\raggedright\strut
-MN
-\strut\end{minipage} &
-\begin{minipage}[t]{0.16\columnwidth}\raggedright\strut
-Drinking
-\strut\end{minipage} &
-\begin{minipage}[t]{0.19\columnwidth}\raggedright\strut
-0.04 ug/l
-\strut\end{minipage}\tabularnewline
-\begin{minipage}[t]{0.27\columnwidth}\raggedright\strut
+\begin{minipage}[t]{0.11\columnwidth}\raggedright\strut
 U.S. EPA
 \strut\end{minipage} &
 \begin{minipage}[t]{0.16\columnwidth}\raggedright\strut
@@ -215,7 +215,7 @@ Drinking
 \begin{minipage}[t]{0.19\columnwidth}\raggedright\strut
 0.3 ug/l
 \strut\end{minipage}\tabularnewline
-\begin{minipage}[t]{0.27\columnwidth}\raggedright\strut
+\begin{minipage}[t]{0.11\columnwidth}\raggedright\strut
 U.S. EPA
 \strut\end{minipage} &
 \begin{minipage}[t]{0.16\columnwidth}\raggedright\strut
@@ -224,8 +224,8 @@ Drinking
 \begin{minipage}[t]{0.19\columnwidth}\raggedright\strut
 1.6 ug/l
 \strut\end{minipage}\tabularnewline
-\begin{minipage}[t]{0.27\columnwidth}\raggedright\strut
-WHO, IN
+\begin{minipage}[t]{0.11\columnwidth}\raggedright\strut
+WHO
 \strut\end{minipage} &
 \begin{minipage}[t]{0.16\columnwidth}\raggedright\strut
 Recreational
@@ -233,8 +233,8 @@ Recreational
 \begin{minipage}[t]{0.19\columnwidth}\raggedright\strut
 2-4 ug/l
 \strut\end{minipage}\tabularnewline
-\begin{minipage}[t]{0.27\columnwidth}\raggedright\strut
-WHO, IN, KS
+\begin{minipage}[t]{0.11\columnwidth}\raggedright\strut
+WHO
 \strut\end{minipage} &
 \begin{minipage}[t]{0.16\columnwidth}\raggedright\strut
 Recreational
@@ -242,8 +242,8 @@ Recreational
 \begin{minipage}[t]{0.19\columnwidth}\raggedright\strut
 10-20 ug/l
 \strut\end{minipage}\tabularnewline
-\begin{minipage}[t]{0.27\columnwidth}\raggedright\strut
-WHO, IN, IA, KS, NE, OH
+\begin{minipage}[t]{0.11\columnwidth}\raggedright\strut
+WHO
 \strut\end{minipage} &
 \begin{minipage}[t]{0.16\columnwidth}\raggedright\strut
 Recreational
@@ -251,7 +251,7 @@ Recreational
 \begin{minipage}[t]{0.19\columnwidth}\raggedright\strut
 20-2000 ug/l
 \strut\end{minipage}\tabularnewline
-\begin{minipage}[t]{0.27\columnwidth}\raggedright\strut
+\begin{minipage}[t]{0.11\columnwidth}\raggedright\strut
 WHO
 \strut\end{minipage} &
 \begin{minipage}[t]{0.16\columnwidth}\raggedright\strut
@@ -260,48 +260,12 @@ Recreational
 \begin{minipage}[t]{0.19\columnwidth}\raggedright\strut
 \textgreater{}2000 ug/l
 \strut\end{minipage}\tabularnewline
-\begin{minipage}[t]{0.27\columnwidth}\raggedright\strut
-CA
-\strut\end{minipage} &
-\begin{minipage}[t]{0.16\columnwidth}\raggedright\strut
-Recreational
-\strut\end{minipage} &
-\begin{minipage}[t]{0.19\columnwidth}\raggedright\strut
-0.8 ug/l
-\strut\end{minipage}\tabularnewline
-\begin{minipage}[t]{0.27\columnwidth}\raggedright\strut
-IL, OR
-\strut\end{minipage} &
-\begin{minipage}[t]{0.16\columnwidth}\raggedright\strut
-Recreational
-\strut\end{minipage} &
-\begin{minipage}[t]{0.19\columnwidth}\raggedright\strut
-10 ug/l
-\strut\end{minipage}\tabularnewline
-\begin{minipage}[t]{0.27\columnwidth}\raggedright\strut
-MA, RI
-\strut\end{minipage} &
-\begin{minipage}[t]{0.16\columnwidth}\raggedright\strut
-Recreational
-\strut\end{minipage} &
-\begin{minipage}[t]{0.19\columnwidth}\raggedright\strut
-14 ug/l
-\strut\end{minipage}\tabularnewline
-\begin{minipage}[t]{0.27\columnwidth}\raggedright\strut
-OH, VT, VA, WA
-\strut\end{minipage} &
-\begin{minipage}[t]{0.16\columnwidth}\raggedright\strut
-Recreational
-\strut\end{minipage} &
-\begin{minipage}[t]{0.19\columnwidth}\raggedright\strut
-6 ug/l
-\strut\end{minipage}\tabularnewline
 \bottomrule
 \end{longtable}
 
-Based on the range of microcystin concentrations used in various policy
-settings, we evaulated associated chlorohpyll \emph{a} concentrations
-for an effect at 0.04, 0.3, 0.8, 1, 1.6, 4, 6, 10, 14, and 20 ug/l.
+We evaulated associated chlorohpyll \emph{a} concentrations for an
+effect for each of the WHO and EPA levels. These were 0.3, 1, 1.6, 2, 4,
+10, and 20 ug/l.
 
 \subsection{Data and Study Area}\label{data-and-study-area}
 
@@ -313,21 +277,7 @@ for an effect at 0.04, 0.3, 0.8, 1, 1.6, 4, 6, 10, 14, and 20 ug/l.
 
 \begin{figure}[htbp]
 \centering
-\includegraphics{manuscript_files/figure-latex/mn_cp_plot-1.pdf}
-\caption{}
-\end{figure}
-
-\newpage
-
-\begin{figure}[htbp]
-\centering
 \includegraphics{manuscript_files/figure-latex/epa_child_cp_plot-1.pdf}
-\caption{}
-\end{figure}
-
-\begin{figure}[htbp]
-\centering
-\includegraphics{manuscript_files/figure-latex/ca_cp_plot-1.pdf}
 \caption{}
 \end{figure}
 
@@ -351,42 +301,19 @@ for an effect at 0.04, 0.3, 0.8, 1, 1.6, 4, 6, 10, 14, and 20 ug/l.
 
 \begin{figure}[htbp]
 \centering
-\includegraphics{manuscript_files/figure-latex/who_rec_low_cp-1.pdf}
+\includegraphics{manuscript_files/figure-latex/who_rec_low1_cp-1.pdf}
 \caption{}
 \end{figure}
 
 \newpage
 
-\begin{figure}[htbp]
-\centering
-\includegraphics{manuscript_files/figure-latex/mult_state_rec_cp-1.pdf}
-\caption{}
-\end{figure}
-
+\includegraphics{manuscript_files/figure-latex/who_rec_low2_cp-1.pdf}
 \newpage
 
-\begin{figure}[htbp]
-\centering
-\includegraphics{manuscript_files/figure-latex/il_org_cp-1.pdf}
-\caption{}
-\end{figure}
-
+\includegraphics{manuscript_files/figure-latex/who_rec_med1_cp-1.pdf}
 \newpage
 
-\begin{figure}[htbp]
-\centering
-\includegraphics{manuscript_files/figure-latex/ma_ri_cp-1.pdf}
-\caption{}
-\end{figure}
-
-\newpage
-
-\begin{figure}[htbp]
-\centering
-\includegraphics{manuscript_files/figure-latex/who_rec_med_cp-1.pdf}
-\caption{}
-\end{figure}
-
+\includegraphics{manuscript_files/figure-latex/who_rec_med2_cp-1.pdf}
 \newpage
 
 \section*{References}\label{references}
