--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -271,6 +271,27 @@ effect for each of the WHO and EPA levels. These were 0.3, 1, 1.6, 2, 4,
 
 \section{Results}\label{results}
 
+\begin{verbatim}
+## 
+## -------------------------------------
+## Source    Microcystin   Chlorophyll  
+## --------- ------------- -------------
+## EPA_Child 0.3           23.68        
+## 
+## WHO       1             65.2         
+## 
+## EPA_Adult 1.6           79.8         
+## 
+## WHO       2             113.1        
+## 
+## WHO       4             273.6        
+## 
+## WHO       10            338.4        
+## 
+## WHO       20            338.4        
+## -------------------------------------
+\end{verbatim}
+
 \section{Discussion}\label{discussion}
 
 \section{Figures}\label{figures}
