--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -271,26 +271,84 @@ effect for each of the WHO and EPA levels. These were 0.3, 1, 1.6, 2, 4,
 
 \section{Results}\label{results}
 
-\begin{verbatim}
-## 
-## -------------------------------------
-## Source    Microcystin   Chlorophyll  
-## --------- ------------- -------------
-## EPA_Child 0.3           23.68        
-## 
-## WHO       1             65.2         
-## 
-## EPA_Adult 1.6           79.8         
-## 
-## WHO       2             113.1        
-## 
-## WHO       4             273.6        
-## 
-## WHO       10            338.4        
-## 
-## WHO       20            338.4        
-## -------------------------------------
-\end{verbatim}
+\begin{longtable}[c]{@{}lll@{}}
+\toprule
+\begin{minipage}[b]{0.13\columnwidth}\raggedright\strut
+Source
+\strut\end{minipage} &
+\begin{minipage}[b]{0.18\columnwidth}\raggedright\strut
+Microcystin
+\strut\end{minipage} &
+\begin{minipage}[b]{0.18\columnwidth}\raggedright\strut
+Chlorophyll
+\strut\end{minipage}\tabularnewline
+\midrule
+\endhead
+\begin{minipage}[t]{0.13\columnwidth}\raggedright\strut
+EPA\_Child
+\strut\end{minipage} &
+\begin{minipage}[t]{0.18\columnwidth}\raggedright\strut
+0.3
+\strut\end{minipage} &
+\begin{minipage}[t]{0.18\columnwidth}\raggedright\strut
+23.68
+\strut\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.13\columnwidth}\raggedright\strut
+WHO
+\strut\end{minipage} &
+\begin{minipage}[t]{0.18\columnwidth}\raggedright\strut
+1
+\strut\end{minipage} &
+\begin{minipage}[t]{0.18\columnwidth}\raggedright\strut
+65.2
+\strut\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.13\columnwidth}\raggedright\strut
+EPA\_Adult
+\strut\end{minipage} &
+\begin{minipage}[t]{0.18\columnwidth}\raggedright\strut
+1.6
+\strut\end{minipage} &
+\begin{minipage}[t]{0.18\columnwidth}\raggedright\strut
+79.8
+\strut\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.13\columnwidth}\raggedright\strut
+WHO
+\strut\end{minipage} &
+\begin{minipage}[t]{0.18\columnwidth}\raggedright\strut
+2
+\strut\end{minipage} &
+\begin{minipage}[t]{0.18\columnwidth}\raggedright\strut
+113.1
+\strut\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.13\columnwidth}\raggedright\strut
+WHO
+\strut\end{minipage} &
+\begin{minipage}[t]{0.18\columnwidth}\raggedright\strut
+4
+\strut\end{minipage} &
+\begin{minipage}[t]{0.18\columnwidth}\raggedright\strut
+273.6
+\strut\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.13\columnwidth}\raggedright\strut
+WHO
+\strut\end{minipage} &
+\begin{minipage}[t]{0.18\columnwidth}\raggedright\strut
+10
+\strut\end{minipage} &
+\begin{minipage}[t]{0.18\columnwidth}\raggedright\strut
+338.4
+\strut\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.13\columnwidth}\raggedright\strut
+WHO
+\strut\end{minipage} &
+\begin{minipage}[t]{0.18\columnwidth}\raggedright\strut
+20
+\strut\end{minipage} &
+\begin{minipage}[t]{0.18\columnwidth}\raggedright\strut
+338.4
+\strut\end{minipage}\tabularnewline
+\bottomrule
+\end{longtable}
 
 \section{Discussion}\label{discussion}
 
