--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -165,6 +165,33 @@ Kingston, RI, 02882, USA\\*
 
 \hrule
 
+Cyanobacteria harmful algal blooms (cHABs) are associated with a wide
+arrange of adverse health effects that stem mostly from the presence of
+cyanotoxins. To help protect agains the impacts, several health advisory
+levels have been set for some of these toxins, in particular, one of the
+most common toxins, microcystin, has several advisory levels set for
+drinking water and recreational use and managing water bodies to meet
+those levels could have far reaching benefits. However, measuring
+micorcystin can not currently be done \emph{in situ} and requires
+samples be processed in a lab. This time consuming and expensive. It is
+possible to find reliable indicators that may be estimated quickly and
+\emph{in situ} as a first defense agains high level of microcystin. In
+particular, chlorophyll \emph{a} has been shown to be postively
+associated with microcystin. In this paper we use this assocation to
+provide estimates of chlorophyll \emph{a} that if exceeded would be
+indiciative of a higher likelihood of exceeding select concentrations of
+microcystin. Using the 2007 National Lakes Assessment and a conditional
+probability appoach that has been used in other water quality settings,
+we idenfify chlorophyll \emph{a} concentrations that are more likely
+than not to be associated with an exceedance of a microcystin health
+advisory level. We look at the recent US EPA standards for drinking
+water as well as the World Health Organization levels for drinking water
+and recerational use. For microcystin concentrations of 0.3, 1, 1.6, 2.
+and 4 we find chlorophyll \emph{a} concentrations of {[}R CODE HERE{]}
+respectively. When managing for these various microsystin levels exceed
+these reproted chlorophyll \emph{a} concentratoins should be a trigger
+for further testing and possibly managment action.
+
 \vspace{3mm}
 
 \hrule
