updated with chla in abstract

--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -187,10 +187,11 @@ than not to be associated with an exceedance of a microcystin health
 advisory level. We look at the recent US EPA standards for drinking
 water as well as the World Health Organization levels for drinking water
 and recerational use. For microcystin concentrations of 0.3, 1, 1.6, 2.
-and 4 we find chlorophyll \emph{a} concentrations of {[}R CODE HERE{]}
-respectively. When managing for these various microsystin levels exceed
-these reproted chlorophyll \emph{a} concentratoins should be a trigger
-for further testing and possibly managment action.
+and 4 we find chlorophyll \emph{a} concentrations of 23.68, 65.2, 79.8,
+113.14, and 273.6, respectively. When managing for these various
+microsystin levels exceed these reproted chlorophyll \emph{a}
+concentratoins should be a trigger for further testing and possibly
+managment action.
 
 \vspace{3mm}
 
