--- a/manuscript/manuscript.Rmd
+++ b/manuscript/manuscript.Rmd
@@ -145,7 +145,8 @@ Cyanobacteria harmful algal blooms (cHABs) are associated with a wide arrange of
 
 #Introduction
 
-EPA just released HA for MC
+In the summer of 2014, the city of Toledo, OH was forced to shut down their municipal water supply due in part to an excess of Microcystin-LR that resulted from a ongoin harmful algal bloom in Lake Erie.  Since this event, signficant legislation has been passed in the United States and the US Environmental Protection Agency has released suggested microcystin-LR concentrations that would trigger health advisories.   
+
 
 MC requires lab work
 
