--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -201,7 +201,12 @@ managment action.
 
 \section{Introduction}\label{introduction}
 
-EPA just released HA for MC
+In the summer of 2014, the city of Toledo, OH was forced to shut down
+their municipal water supply due in part to an excess of Microcystin-LR
+that resulted from a ongoin harmful algal bloom in Lake Erie. Since this
+event, signficant legislation has been passed in the United States and
+the US Environmental Protection Agency has released suggested
+microcystin-LR concentrations that would trigger health advisories.
 
 MC requires lab work
 
