--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -205,12 +205,25 @@ In the summer of 2014, the city of Toledo, OH was forced to shut down
 their municipal water supply due in part to an excess of Microcystin-LR
 that resulted from a ongoin harmful algal bloom in Lake Erie. Since this
 event, signficant legislation has been passed in the United States and
-the US Environmental Protection Agency has released suggested
+the US Environmental Protection Agency (USEPA) has released suggested
 microcystin-LR concentrations that would trigger health advisories.
+While these levels and association advisories are likey to help mitigate
+the impacts from harmful algal blooms, they are not without
+complications. One of these complications is that they rely on availble
+measurments of Microcysin-LR which requires taking regular water samples
+and having those samples process in a lab to determin the toxin
+concentration. This has the potentially to be costly and time consuming
+both factors which could limit monitoring efforts. Fortunately,
+microcystin-LR has been shown to be associated with several other, more
+easily measured components of water quality.
 
-MC requires lab work
+Chlorophyll \emph{a} is one of the most commonly measured components of
+water quality that is also known to be strongly associated with
+Microsystin-LR concentrations {[}REFS{]}.
 
-MC associated with Chl a
+MC associated with Chl a These levels, along with the existing World
+Health Organization (WHO) levels represent a range concentrations that
+occur
 
 Use association and cpa to id chl a concentration that indicative of
 exceeding HA
